Fix and stabilize backend test suite